@@ -5,6 +5,9 @@ Changelog
 1.1.2 (2014-08-07)
 ------------------
 
+- Adds the ability to change the email address of a reservation.
+  [href]
+
 - Ensure that the session data is never shared between browsers, even if
   the same user is logged in.
   [href]
